[gd_scene load_steps=3 format=3 uid="uid://ddqgo2q43epuh"]

[ext_resource type="Texture2D" uid="uid://b5v5wxpymaqnp" path="res://snail/snail.svg" id="1_fiukj"]
[ext_resource type="Script" path="res://snail/tail_ray_cast.gd" id="1_pfijc"]

[node name="TailRayCast" type="Node2D"]
script = ExtResource("1_pfijc")

[node name="Remote1" type="Node2D" parent="."]

[node name="RayCast" type="RayCast2D" parent="Remote1"]
position = Vector2(0, -125)
target_position = Vector2(0, 500)
collision_mask = 4

[node name="TailPoint" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = 1
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_fiukj")

[node name="Remote2" type="Node2D" parent="."]

[node name="Raycast2Pivot" type="Node2D" parent="Remote2"]

[node name="ConstantRotation" type="Node2D" parent="Remote2/Raycast2Pivot"]
rotation = -1.5708

[node name="RayCast2" type="RayCast2D" parent="Remote2/Raycast2Pivot/ConstantRotation"]
position = Vector2(0, -125)
target_position = Vector2(0, 500)
collision_mask = 4
